# Cryptalert

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
cryptalert/: __init__.py  __main__.py  app.py  config.py  exceptions.py
cryptalert/data_fetcher/: api-accessor.py  api_accessor.py
cryptalert/discord_bot/: __init__.py  bot.py
cryptalert/discord_bot/cogs/: bot_mixin.py  crypto.py  utils.py
cryptalert/text_ui/: tui.py
