[metadata]
name = Cryptalert
version = file: VERSION
author = Emil Rekola
license_files = LICENSE
author_email = emil.rekola@hotmail.com
description = Provides information about cryptocurrency movements
url = https://github.com/rekolae/Cryptalert
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console :: Curses

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True
install_requires =
  requests==2.25.1
  ConfigArgParse == 1.3
  discord.py==1.6.0
  windows-curses==2.2.0; platform_system == "Windows"